Fix overflow scrolling

--- a/src/views/Gearsets/styles.styl
+++ b/src/views/Gearsets/styles.styl
@@ -24,6 +24,7 @@ $durationDelay = $duration / 10
 
   // mobile styling
   @media screen and (max-width: 679px)
+    -webkit-overflow-scrolling: touch
     overflow: scroll
     white-space: nowrap
 
